Closed Bug 399485 Opened 18 years ago Closed 18 years ago

Wrong mapping with Thai keyboard on Mac OS X

Categories

(Core :: Widget: Cocoa, defect)

PowerPC
macOS
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: markpeak, Assigned: masayuki)

References

Details

(Keywords: intl, regression)

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a9pre) Gecko/2007101104 Minefield/3.0a9pre Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a9pre) Gecko/2007101104 Minefield/3.0a9pre In Firefox 3 Build 2007101104 on Mac OS X 10.4.10 There are wrong mapping characters with Thai keyboard. I found 3 characters so far: - ช (Cho Chang - Unicode 0E0A - same position with "=") is mapped to Return (Enter) - ญ (Yo Ting - Unicode 0E0D - same position with "P") is mapped to Return (Enter) - ฉ (Cho Ching - Unicode 0E09 - same position with "C") is mapped to Shift+Tab This bug makes Firefox unusable to input normal Thai sentence to any textbox. Doesn't happen in yesterday's build (20071010). Reproducible: Always Steps to Reproduce: 1. Enable Thai keyboard in Mac OS X Preferences 2. Open any web page with text a box 3. Type the wrong characters Copy the characters from TextEdit and paste in Firefox is working.
Confirmed. Tested with build 2007101104 on Mac OS X 10.4.10
based on the regression range in comment 0: http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2007-10-10+03%3A00%3A00&maxdate=2007-10-11+04%3A00%3A00&cvsroot=%2Fcvsroot Possibly a regression from 385292 ? ( I cannot read or type Thai, so I can't really test this...) Masayuki-san could your patch have caused this?
Product: Firefox → Core
QA Contact: general → general
Version: unspecified → Trunk
That said, typing the 3 characters mentioned in comment 0 works with: 20071011_0042_firefox-3.0a9pre.en-US.mac.dmg Fails with: 20071011_0143_firefox-3.0a9pre.en-US.mac.dmg http://bonsai.mozilla.org/cvsquery.cgi?module=PhoenixTinderbox&date=explicit&mindate=1192088520&maxdate=1192092179 A regression from bug 385292.
Blocks: 385292
Status: UNCONFIRMED → NEW
Ever confirmed: true
maybe, [mCurKeyEvent charactersIgnoringModifiers] returns wrong value.
er, the previous comment is wrong, probably I found the cause. I'll post a patch.
Assignee: nobody → joshmoz
Component: General → Widget: Cocoa
Flags: blocking1.9?
QA Contact: general → cocoa
Assignee: joshmoz → masayuki
Attached patch Patch rv1.0 (obsolete) — Splinter Review
The inputted unicode character's lead byte is dropped in ConvertMacToGeckoKeyCode. We need to care it.
Attachment #284824 - Flags: review?(joshmoz)
Comment on attachment 284824 [details] [diff] [review] Patch rv1.0 + if (aChar > 0x7F) Please add a comment explaining why 0x7F is used.
Attachment #284824 - Flags: review?(joshmoz) → review+
Attached patch Patch rv1.1Splinter Review
Thank you, Josh. I think that we only need to support the key codes for ASCII characters. Because the key code should be only used for non-text inputting.
Attachment #284824 - Attachment is obsolete: true
Attachment #284907 - Flags: superreview?(roc)
Attachment #284907 - Flags: review+
Attachment #284907 - Flags: approval1.9?
Attachment #284907 - Flags: superreview?(roc)
Attachment #284907 - Flags: superreview+
Attachment #284907 - Flags: approval1.9?
Attachment #284907 - Flags: approval1.9+
checked-in. -> FIXED
Status: NEW → RESOLVED
Closed: 18 years ago
Flags: blocking1.9?
Resolution: --- → FIXED
Verified on 2007101509.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: