Bug 399485 Wrong mapping with Thai keyboard on Mac OS X r=josh, sr+a=roc